[tool.poetry]
name = "airbnb-backend"
version = "0.1.0"
description = ""
authors = ["bleucumulus <bleucumulus@naver.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
